# rust-fastq-parser

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md  pixi.toml  sample_clean.fastq
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: parser_bench.rs
dev/bench/: data.js
docs/: api-reference.md  barcode.md  buffer.md  error.md  filter.md  index.md  metrics.md  mmap.md  paired.md  parallel.md  parser.md  reader.md  record.md  simd.md  writer.md
examples/: advanced_features.rs
src/: barcode.rs  buffer.rs  error.rs  filter.rs  index.rs  lib.rs  main.rs  metrics.rs  paired.rs  parallel.rs  parser.rs  reader.rs  record.rs  simd.rs  stream.rs  writer.rs
tests/: comprehensive_test.rs  integration_tests.rs  new_features_test.rs
